add info to examples site

--- a/examples/src/App.css
+++ b/examples/src/App.css
@@ -50,3 +50,9 @@ canvas {
 .sidepanel > a:hover {
   background-color: #eee;
 }
+
+.content {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 2rem;
+}
