--- a/examples/src/App.css
+++ b/examples/src/App.css
@@ -18,6 +18,7 @@ canvas {
   padding: 10px 16px;
   height: 100vh;
   width: 200px;
+  flex-shrink: 0;
   background-color: #fff;
 }
 
@@ -49,10 +50,4 @@ canvas {
 
 .sidepanel > a:hover {
   background-color: #eee;
-}
-
-.content {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 2rem;
 }
