--- a/examples/src/App.css
+++ b/examples/src/App.css
@@ -15,6 +15,7 @@ body {
   height: 100vh;
   width: 200px;
   flex-shrink: 0;
+  z-index: 2000;
   background-color: #fff;
 }
 
@@ -82,6 +83,8 @@ body {
   margin: 0;
   border: none;
   cursor: pointer;
+  background-color: #fff;
+  z-index: 1999;
 }
 
 .hamburger:focus {
