change font + format

--- a/examples/src/App.css
+++ b/examples/src/App.css
@@ -1,6 +1,5 @@
 body {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: monospace;
   margin: 0;
   background-color: #eee;
   overflow: hidden;
